--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,8 +3,8 @@ boto3==1.21.40
 botocore==1.24.40
 cachetools==5.0.0
 jmespath==1.0.0
-pynamite==0.0.1
 python-dateutil==2.8.2
 s3transfer==0.5.2
 six==1.16.0
 urllib3==1.26.9
+pytest
